2005-08-31  David Edelsohn  <edelsohn@gnu.org>

        PR target/23539
	Backport from mainline:

	2005-08-27  David Edelsohn  <edelsohn@gnu.org>
        * config/rs6000/rs6000.c (expand_block_move): Use HImode when
        bytes >= 2 not bytes == 2.

2005-08-21  Jakub Jelinek  <jakub@redhat.com>

	* simplify-rtx.c (simplify_immed_subreg) <case CONST_DOUBLE>: Only clear
	up to elem_bitsize bits, not max_bitsize.

2005-07-20  Steve Ellcey  <sje@cup.hp.com>

	PR target/21841
	* doc/invoke.texi (-mgnu-ld): Update description.
	(-mhp-ld): Ditto.

2005-08-09  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/17860
	* loop.c (check_dbra_loop): Do not try to use an end condition
	like "i != 0" in the reversed loop.

2005-08-08  Josh Conner  <jconner@apple.com>

	PR rtl-optimization/23241
	* combine.c (simplify_comparison): Fix error in determining
	whether to lift a subreg from comparison.

2005-08-08  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/21964
	* stmt.c (tail_recursion_args): Insert a call to emit_queue.

2005-08-08  Richard Sandiford  <richard@codesourcery.com>

	PR c/22458
	* c-decl.c (c_begin_compound_stmt): Set the initial body to
	error_mark_node, not NULL.

2005-08-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa64-regs.h (CONDITIONAL_REGISTER_USAGE): Fix loop upper bound.

2005-08-06  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR pch/14940
	Backport from mainline:

	* config.host (hppa*-*-hpux*, hppa*-*-linux): Define out_host_hook_obj
	and host_xmake_file using new host configuration files.
	* config/pa/pa-host.c, config/pa/x-hpux, config/pa/x-linux: New files.

2005-08-06  Christian Joensson  <christian.joensson@gmail.com>

	PR target/20673
	Backport from mainline:

	2005-04-15  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.h (sparc_hard_reg_printed): Mark as GTY(()).

2005-08-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (function_arg): Fix typo in last change.
